test/expected/case_package.dg.out
1
2	__builtins__
2	__doc__
2	__file__
2	__loader__
2	__name__
2	__package__
2	__spec__
3
3	__builtins__
3	__doc__
3	__file__
3	__loader__
3	__name__
3	__package__
3	__spec__
4
5	!
5	!!
5	!!~
5	!=
5	!BaseException
5	!chain
5	!dict
5	!import
5	!importname
5	!keyword_union
5	!locals
5	!subclass
5	!super
5	$
5	%
5	&
5	*
5	**
5	+
5	+:
5	,
5	-
5	->
5	->>
5	..
5	...
5	/
5	//
5	:+
5	::
5	<
5	<-
5	<<
5	<=
5	==
5	>
5	>=
5	>>
5	ArithmeticError
5	AssertionError
5	AttributeError
5	BaseException
5	BlockingIOError
5	BrokenPipeError
5	BufferError
5	BytesWarning
5	ChildProcessError
5	ConnectionAbortedError
5	ConnectionError
5	ConnectionRefusedError
5	ConnectionResetError
5	DeprecationWarning
5	EOFError
5	Ellipsis
5	EnvironmentError
5	Exception
5	False
5	FileExistsError
5	FileNotFoundError
5	FloatingPointError
5	FutureWarning
5	GeneratorExit
5	IOError
5	ImportError
5	ImportWarning
5	IndentationError
5	IndexError
5	InterruptedError
5	IsADirectoryError
5	KeyError
5	KeyboardInterrupt
5	LookupError
5	MemoryError
5	ModuleNotFoundError
5	NameError
5	None
5	NotADirectoryError
5	NotImplemented
5	NotImplementedError
5	OSError
5	OverflowError
5	PendingDeprecationWarning
5	PermissionError
5	ProcessLookupError
5	RecursionError
5	ReferenceError
5	ResourceWarning
5	RuntimeError
5	RuntimeWarning
5	StopAsyncIteration
5	StopIteration
5	SyntaxError
5	SyntaxWarning
5	SystemError
5	SystemExit
5	TabError
5	TimeoutError
5	True
5	TypeError
5	UnboundLocalError
5	UnicodeDecodeError
5	UnicodeEncodeError
5	UnicodeError
5	UnicodeTranslateError
5	UnicodeWarning
5	UserWarning
5	ValueError
5	Warning
5	ZeroDivisionError
5	^
5	__build_class__
5	__debug__
5	__doc__
5	__import__
5	__loader__
5	__name__
5	__package__
5	__spec__
5	abs
5	all
5	and
5	any
5	ascii
5	bin
5	bind
5	bool
5	breakpoint
5	bytearray
5	bytes
5	callable
5	chain
5	chr
5	classmethod
5	compile
5	complex
5	copyright
5	credits
5	delattr
5	dict
5	dict'
5	dir
5	divmod
5	drop
5	dropwhile
5	enumerate
5	eval
5	exec
5	exhaust
5	exit
5	filter
5	finally
5	flip
5	float
5	foldl
5	foldl1
5	format
5	frozenset
5	fst
5	getattr
5	globals
5	hasattr
5	hash
5	head
5	help
5	hex
5	id
5	in
5	init
5	input
5	int
5	is
5	isinstance
5	issubclass
5	iter
5	iterate
5	last
5	len
5	license
5	list
5	list'
5	locals
5	map
5	max
5	memoryview
5	min
5	next
5	not
5	object
5	oct
5	open
5	or
5	ord
5	otherwise
5	pow
5	print
5	property
5	quit
5	raise
5	range
5	repr
5	reversed
5	round
5	scanl
5	scanl1
5	set
5	set'
5	setattr
5	slice
5	snd
5	sorted
5	staticmethod
5	str
5	sum
5	super
5	tail
5	take
5	takewhile
5	tuple
5	tuple'
5	type
5	vars
5	zip
5	|
5	~
5	~>
5	~>>
6
7	ArithmeticError
7	AssertionError
7	AttributeError
7	BaseException
7	BlockingIOError
7	BrokenPipeError
7	BufferError
7	BytesWarning
7	ChildProcessError
7	ConnectionAbortedError
7	ConnectionError
7	ConnectionRefusedError
7	ConnectionResetError
7	DeprecationWarning
7	EOFError
7	Ellipsis
7	EnvironmentError
7	Exception
7	False
7	FileExistsError
7	FileNotFoundError
7	FloatingPointError
7	FutureWarning
7	GeneratorExit
7	IOError
7	ImportError
7	ImportWarning
7	IndentationError
7	IndexError
7	InterruptedError
7	IsADirectoryError
7	KeyError
7	KeyboardInterrupt
7	LookupError
7	MemoryError
7	ModuleNotFoundError
7	NameError
7	None
7	NotADirectoryError
7	NotImplemented
7	NotImplementedError
7	OSError
7	OverflowError
7	PendingDeprecationWarning
7	PermissionError
7	ProcessLookupError
7	RecursionError
7	ReferenceError
7	ResourceWarning
7	RuntimeError
7	RuntimeWarning
7	StopAsyncIteration
7	StopIteration
7	SyntaxError
7	SyntaxWarning
7	SystemError
7	SystemExit
7	TabError
7	TimeoutError
7	True
7	TypeError
7	UnboundLocalError
7	UnicodeDecodeError
7	UnicodeEncodeError
7	UnicodeError
7	UnicodeTranslateError
7	UnicodeWarning
7	UserWarning
7	ValueError
7	Warning
7	ZeroDivisionError
7	__build_class__
7	__debug__
7	__doc__
7	__import__
7	__loader__
7	__name__
7	__package__
7	__spec__
7	abs
7	all
7	any
7	ascii
7	bin
7	bool
7	breakpoint
7	bytearray
7	bytes
7	callable
7	chr
7	classmethod
7	compile
7	complex
7	copyright
7	credits
7	delattr
7	dict
7	dir
7	divmod
7	enumerate
7	eval
7	exec
7	exit
7	filter
7	float
7	format
7	frozenset
7	getattr
7	globals
7	hasattr
7	hash
7	help
7	hex
7	id
7	input
7	int
7	isinstance
7	issubclass
7	iter
7	len
7	license
7	list
7	locals
7	map
7	max
7	memoryview
7	min
7	next
7	object
7	oct
7	open
7	ord
7	pow
7	print
7	property
7	quit
7	range
7	repr
7	reversed
7	round
7	set
7	setattr
7	slice
7	sorted
7	staticmethod
7	str
7	sum
7	super
7	tuple
7	type
7	vars
7	zip
